--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -368,7 +368,7 @@ valine:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-105694158-1
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster/
