--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,14 @@ pagination_dir: page
 #theme: landscape
 theme: next
 
+## algolia
+algolia:
+  applicationID: 7638RIZ0FP
+  apiKey: 950085bcd7e1eafab31644c7a4ba82a3
+  adminApiKey: c6b2adbd546522dd539b984f30bec159
+  indexName: hexoblog_search
+  chunkSize: 5000
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
